looping issue && create new course access denied && more translation added && menu overflow fixes

--- a/assets/src/sass/components/_headers.scss
+++ b/assets/src/sass/components/_headers.scss
@@ -132,6 +132,7 @@
     display: flex;
     list-style: none;
     padding: 0;
+    flex-wrap: wrap;
     .menu-item {
         a {
             padding: 5px;
